🐛 fix wrong font file name

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'ChulaCharasNew';
-  src: local('ChulaCharasNew Italic'), url('/fonts/ChulaCharasNewRegIta.ttf');
+  src: local('ChulaCharasNew Italic'), url('/fonts/ChulaCharasNewIta.ttf');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
